--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -12,3 +12,11 @@ spring:
             uri: lb://catalog-service
             predicates:
               - Path=/catalog/**
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
