--- a/catalog-service-dev.yml
+++ b/catalog-service-dev.yml
@@ -1,4 +1,12 @@
 server:
-  port: 8083
-
-message: This message is from catalog-service-dev
+  port: ${PORT:${SERVER_PORT:0}}
+spring:
+  application:
+    name: catalog-service
+eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
