--- a/movie-service-dev.yml
+++ b/movie-service-dev.yml
@@ -1,4 +1,26 @@
-server:
-  port: 8082
+#server:
+#  port: 8082
+#
+#message: This message is from movie-service-dev
 
-message: This message is from movie-service-dev
+server:
+  port: ${PORT:${SERVER_PORT:0}}
+spring:
+  application:
+    name: movie-service
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/movie-dev
+    username: usr-movie
+    password: pwd-movie
+  jpa:
+    hibernate.ddl-auto: update
+    generate-ddl: true
+    show-sql: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
